--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "jwt-decode": "^4.0.0",
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.11",
+    "days": "^1.1.1",
+    "geocoder": "^0.2.3"
   }
 }
