--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "dayjs": "^1.11.11",
     "days": "^1.1.1",
-    "geocoder": "^0.2.3"
+    "geocode": "^0.0.3",
+    "geocoder": "^0.2.3",
+    "ol": "^9.2.4"
   }
 }
