--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,13 @@
 {
     "dependencies": {
-        "bcrypt": "^5.1.1",
+        "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
-        "crypto": "^1.0.1",
-        "crypto-js": "^4.2.0",
-        "doctrine": "^3.0.0",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
-        "nodemon": "^3.1.2",
-        "sequelize": "^6.37.3"
+        "nodemon": "^3.1.2"
     },
     "name": "server",
     "version": "1.0.0",
@@ -25,7 +21,6 @@
     "license": "ISC",
     "description": "",
     "devDependencies": {
-        "firebase": "^10.12.2",
         "mysql2": "^3.9.8"
     }
 }
